{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 8,
  "lineage": "2a3aaefd-a8d4-0c19-78cd-c168e9fe6fa4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013078424555:vpc/vpc-0e1c1b8fa1f3a8b62",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01e0d351155b9e04b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-01980ddf676c6c57d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e1c1b8fa1f3a8b62",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0328636a80f4d88a3",
            "owner_id": "013078424555",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013078424555:security-group/sg-03a6f4aad29d341ec",
            "description": "Security group for dev_ssh_sg",
            "egress": [],
            "id": "sg-03a6f4aad29d341ec",
            "ingress": [],
            "name": "dev_ssh_sg-20210920100249275900000001",
            "name_prefix": "dev_ssh_sg-",
            "owner_id": "013078424555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_ssh_sg"
            },
            "tags_all": {
              "Name": "dev_ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1c1b8fa1f3a8b62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2417819853",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03a6f4aad29d341ec",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.dev_ssh_sg.aws_security_group.this",
            "module.dev_ssh_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013078424555:security-group/sg-0fb37bf2779825d04",
            "description": "Security group for ec2_sg",
            "egress": [],
            "id": "sg-0fb37bf2779825d04",
            "ingress": [],
            "name": "ec2_sg-20210920100249278200000002",
            "name_prefix": "ec2_sg-",
            "owner_id": "013078424555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1c1b8fa1f3a8b62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2428307426",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fb37bf2779825d04",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-751489735",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb37bf2779825d04",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}